--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
  
        function display()
        {
-        numberOutput.innerHTML = "Your guess: " + guess+ "  " + answer;
+        numberOutput.innerHTML = "Your guess: " + guess;
         
         guessOutput.innerHTML = "Number of guesses: " + numGuesses;
        
